# tsbin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json  tsbin_wasm.d.ts  tsbin_wasm_bg.wasm  turbo.json
.github/workflows/: master_tsbin-api.yml  publish-wasm.yml
apps/api/: .env.example  .gitignore  Dockerfile  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/appwrite/: appwrite.service.ts
apps/api/src/lib/: utils.ts
apps/api/src/service/: prisma.service.ts
apps/api/src/telegram/: telegram.service.ts
apps/api/src/trash/: trash.controller.ts  trash.module.ts  (+1 more)
apps/web/: index.html  package.json
apps/web/src/: App.tsx
backend/: package-lock.json  package.json
backend/scripts/: setup-db.js
backend/src/: app.controller.ts  main.ts
backend/src/lib/: exception-filter.ts  utils.ts
backend/src/telegram/: telegram.service.ts
backend/src/trash/: trash.controller.ts  trash.module.ts  trash.service.ts
cli/: README.md  Usage_Guide.md  package-lock.json
cli/downloads/: a.txt
cli/src/: decryptSnippet.js  download.js  snippet.js  telegramDownload.js  telegramUpload.js  upload.js
cli/test/: sendMessage.js
cli/utils/: encryptFile.js
crates/wasm/: Cargo.toml
crates/wasm/src/: client.rs  controller.rs  encryptor.rs  lib.rs  types.rs  utils.rs
frontend/: .env  .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  MainBin.tsx  TrashView.tsx
frontend/src/lib/: apis.ts  constants.ts  encryption.ts
(+13 files in other folders)
