[package]
name = "tsbin-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Priyanshu Verma <priyanshuverma@outlook.in>"]
repository = "https://github.com/PriyanshuPz/tsbin"

[lib]
crate-type = ["cdylib"]


[dependencies]
aes-gcm = "0.10.3"
sha2 = "0.10.9"
pbkdf2 = { version = "0.12", features = ["simple"] }
getrandom = { version = "0.2", features = ["js"] } 
wasm-bindgen = "0.2.104"
web-sys = {version = "0.3.81", features = ["console","Request","RequestInit","RequestMode","Response","Headers","FormData","File","Blob","ReadableStream","ReadableStreamDefaultReader","Window"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
hmac = "0.12"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }
futures = "0.3"
tokio = { version = "1.0", features = ["macros"] }
generic-array = {version = "1.3.5", features = ["compat-0_14"]}
wasm-bindgen-futures = "0.4.54"
js-sys = "0.3.81"

